    2/ for data base name change (gwf file field "renamed") and
    3/ detected robot exclusion (when option -robot_xcl has been set).
  - [Aug 13, 99] Fixed bug: when merging persons, the "other relations" where
    not included.
  - [Aug 8, 99] Added option "-redirect" to say to the users that the
    GeneWeb service has been redirected to some other address.

* Gedcom to GeneWeb (ged2gwb)
  - [Aug 22, 99] The option "-no_efn" is now the default. Made the change
    in "setup" files too.

* Base configuration files (base.gwf)
  - [Aug 20, 99] Added new variables "max_anc_level" and "max_desc_level"
    to specify the maximum level of generations that can be displayed in
    ancestors and descendants displaying (default resp. 8 and 12 generations).
  - [Aug 18, 99] Added a new variable "auth_file" in data bases configuration
    files (files ending with ".gwf") overriding the possible authorization
    file set by option "-auth" of gwd. Therefore now, each data base can have
    its specific global restricted access. See the template file "a.gwf".
    Works only in server (not cgi) mode.

* Lexicon (lang/lexicon.txt)
  - [Aug 29, 99] Updated some Dutch phrases (Joris Esch).

* Documentation
  - [Aug 19, 99] Added new chapter "the access restrictions to data bases"
    about wizards, friends, global access restrictions, robots, black list.

GeneWeb version 2.05
--------------------

* General
  - [Aug 4, 99] In the distribution main directory, files README.txt (English)
    and LISEZMOI.txt (French), added a few lines of explanations for starting
    with GeneWeb.
  - [Jul 15, 99] Changed internal representation of strings in data bases.
    Should not make any differences while browsing. However, as it is a major
    internal change in the program, problems may appear (mainly in displaying
    or in access by name, first name, surname, title...): please report if any
    problem.

* Setup program